updated changes in classes